test/integration/bad/new/bad_data_modifier_decl.stan
// TODO: would be nice to specialize for this mistake
generated quantities {
  data real x = 1;
}
